# api.swagger.json
@@ -199,6 +199,12 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "public",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "tags": [
@@ -273,9 +279,8 @@
                   "type": "number",
                   "format": "double"
                 },
-                "accessLevel": {
-                  "type": "integer",
-                  "format": "int32"
+                "access": {
+                  "$ref": "#/definitions/accessAccess"
                 }
               }
             }
@@ -435,6 +440,33 @@
               "STATIC"
             ],
             "default": "UNKNOWN"
+          },
+          {
+            "name": "fee.precision",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "fee.round",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "NONE",
+              "FLOOR",
+              "ROUND",
+              "CEIL"
+            ],
+            "default": "NONE"
+          },
+          {
+            "name": "fee.default",
+            "in": "query",
+            "required": false,
+            "type": "number",
+            "format": "double"
           }
         ],
         "tags": [
@@ -493,6 +525,33 @@
               "STATIC"
             ],
             "default": "UNKNOWN"
+          },
+          {
+            "name": "fee.precision",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "fee.round",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "NONE",
+              "FLOOR",
+              "ROUND",
+              "CEIL"
+            ],
+            "default": "NONE"
+          },
+          {
+            "name": "fee.default",
+            "in": "query",
+            "required": false,
+            "type": "number",
+            "format": "double"
           }
         ],
         "tags": [
@@ -555,9 +614,10 @@
                 },
                 "meta": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "object"
-                  }
+                  "additionalProperties": {}
+                },
+                "fee": {
+                  "$ref": "#/definitions/billingFee"
                 }
               }
             }
@@ -891,9 +951,7 @@
                 },
                 "params": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "object"
-                  }
+                  "additionalProperties": {}
                 }
               }
             }
@@ -1293,9 +1351,7 @@
                 },
                 "context": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "object"
-                  }
+                  "additionalProperties": {}
                 },
                 "instancesGroups": {
                   "type": "array",
@@ -1306,9 +1362,8 @@
                 "hash": {
                   "type": "string"
                 },
-                "accessLevel": {
-                  "type": "integer",
-                  "format": "int32"
+                "access": {
+                  "$ref": "#/definitions/accessAccess"
                 }
               }
             }
@@ -1855,9 +1910,7 @@
                 },
                 "secrets": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "object"
-                  }
+                  "additionalProperties": {}
                 },
                 "vars": {
                   "type": "object",
@@ -1876,9 +1929,7 @@
                 },
                 "publicData": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "object"
-                  }
+                  "additionalProperties": {}
                 },
                 "public": {
                   "type": "boolean"
@@ -1891,6 +1942,9 @@
                   "items": {
                     "$ref": "#/definitions/services_providersLocationConf"
                   }
+                },
+                "access": {
+                  "$ref": "#/definitions/accessAccess"
                 }
               }
             }
@@ -1981,9 +2035,7 @@
                 },
                 "params": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "object"
-                  }
+                  "additionalProperties": {}
                 }
               }
             }
@@ -2134,6 +2186,31 @@
         }
       }
     },
+    "accessAccess": {
+      "type": "object",
+      "properties": {
+        "level": {
+          "$ref": "#/definitions/accessLevel"
+        },
+        "role": {
+          "type": "string"
+        },
+        "namespace": {
+          "type": "string"
+        }
+      }
+    },
+    "accessLevel": {
+      "type": "string",
+      "enum": [
+        "NONE",
+        "READ",
+        "MGMT",
+        "ADMIN",
+        "ROOT"
+      ],
+      "default": "NONE"
+    },
     "accountsAccount": {
       "type": "object",
       "properties": {
@@ -2150,9 +2227,8 @@
           "type": "number",
           "format": "double"
         },
-        "accessLevel": {
-          "type": "integer",
-          "format": "int32"
+        "access": {
+          "$ref": "#/definitions/accessAccess"
         }
       }
     },
@@ -2215,6 +2291,45 @@
         }
       }
     },
+    "billingFee": {
+      "type": "object",
+      "properties": {
+        "precision": {
+          "type": "string",
+          "format": "int64"
+        },
+        "round": {
+          "$ref": "#/definitions/billingRound"
+        },
+        "default": {
+          "type": "number",
+          "format": "double"
+        },
+        "ranges": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/billingFeeRange"
+          }
+        }
+      }
+    },
+    "billingFeeRange": {
+      "type": "object",
+      "properties": {
+        "from": {
+          "type": "number",
+          "format": "double"
+        },
+        "to": {
+          "type": "number",
+          "format": "double"
+        },
+        "factor": {
+          "type": "number",
+          "format": "double"
+        }
+      }
+    },
     "billingKind": {
       "type": "string",
       "enum": [
@@ -2256,9 +2371,10 @@
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
+        },
+        "fee": {
+          "$ref": "#/definitions/billingFee"
         }
       }
     },
@@ -2290,15 +2406,11 @@
         },
         "resources": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "sorter": {
           "type": "integer",
@@ -2343,8 +2455,21 @@
           "items": {
             "$ref": "#/definitions/statesNoCloudState"
           }
+        },
+        "fee": {
+          "$ref": "#/definitions/billingFee"
         }
       }
+    },
+    "billingRound": {
+      "type": "string",
+      "enum": [
+        "NONE",
+        "FLOOR",
+        "ROUND",
+        "CEIL"
+      ],
+      "default": "NONE"
     },
     "billingTransaction": {
       "type": "object",
@@ -2381,9 +2506,7 @@
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          },
+          "additionalProperties": {},
           "title": "Transaction meta data, like\nmeta: {\ntotal: \u003cnumber\u003e // resource \"quantity\", e.g. CPU cores, RAM Mb, Drive Mb, IP quantity\nprice_atm: \u003cnumber\u003e // hourly price per quant of resouce at the moment, e.g. 1 NCU \n[other keys]: \u003cany\u003e // for example Drive Type(SSD/HDD/NVMe/etc)\n}"
         }
       }
@@ -2554,21 +2677,15 @@
         },
         "config": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "resources": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "data": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "state": {
           "$ref": "#/definitions/statesState"
@@ -2582,9 +2699,8 @@
         "product": {
           "type": "string"
         },
-        "accessLevel": {
-          "type": "integer",
-          "format": "int32"
+        "access": {
+          "$ref": "#/definitions/accessAccess"
         }
       }
     },
@@ -2618,9 +2734,7 @@
         },
         "config": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "instances": {
           "type": "array",
@@ -2630,15 +2744,11 @@
         },
         "resources": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "data": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "hash": {
           "type": "string"
@@ -2646,9 +2756,8 @@
         "sp": {
           "type": "string"
         },
-        "accessLevel": {
-          "type": "integer",
-          "format": "int32"
+        "access": {
+          "$ref": "#/definitions/accessAccess"
         }
       }
     },
@@ -2702,9 +2811,8 @@
         "title": {
           "type": "string"
         },
-        "accessLevel": {
-          "type": "integer",
-          "format": "int32"
+        "access": {
+          "$ref": "#/definitions/accessAccess"
         }
       }
     },
@@ -2758,9 +2866,7 @@
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          },
+          "additionalProperties": {},
           "title": "Record meta data, like\nmeta: {\ntotal: \u003cnumber\u003e // resource \"quantity\", e.g. CPU cores, RAM Mb, Drive Mb, IP quantity\nprice_atm: \u003cnumber\u003e // hourly price per quant of resouce at the moment, e.g. 1 NCU \n[other keys]: \u003cany\u003e // for example Drive Type(SSD/HDD/NVMe/etc)\n}"
         }
       }
@@ -2838,9 +2944,7 @@
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         }
       }
     },
@@ -2910,9 +3014,7 @@
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         }
       }
     },
@@ -3071,9 +3173,7 @@
         },
         "context": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "instancesGroups": {
           "type": "array",
@@ -3084,9 +3184,8 @@
         "hash": {
           "type": "string"
         },
-        "accessLevel": {
-          "type": "integer",
-          "format": "int32"
+        "access": {
+          "$ref": "#/definitions/accessAccess"
         }
       }
     },
@@ -3204,9 +3303,7 @@
         },
         "extra": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         }
       }
     },
@@ -3232,9 +3329,7 @@
         },
         "secrets": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "vars": {
           "type": "object",
@@ -3253,9 +3348,7 @@
         },
         "publicData": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "public": {
           "type": "boolean"
@@ -3268,6 +3361,9 @@
           "items": {
             "$ref": "#/definitions/services_providersLocationConf"
           }
+        },
+        "access": {
+          "$ref": "#/definitions/accessAccess"
         }
       }
     },
@@ -3279,9 +3375,7 @@
       "properties": {
         "value": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         }
       }
     },
@@ -3337,9 +3431,7 @@
         },
         "meta": {
           "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "additionalProperties": {}
         },
         "ts": {
           "type": "string",
